--- a/src/Dorothy/Views/Shared/_Layout.cshtml
+++ b/src/Dorothy/Views/Shared/_Layout.cshtml
@@ -19,11 +19,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">Dorothy</a>
+                    <a asp-controller="User" asp-action="Index" class="navbar-brand">Dorothy</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li><a asp-controller="Guests" asp-action="Index">Gäste verwalten</a></li>
+                        }
                         <li><a asp-controller="Home" asp-action="Logout">Log out</a></li>
                     </ul>
                 </div>
