Support for editing guests and groups.

--- a/src/Dorothy/Views/Guests/Edit.cshtml
+++ b/src/Dorothy/Views/Guests/Edit.cshtml
@@ -1,6 +1,6 @@
-﻿@model Dorothy.ViewModels.Guests.CreateViewModel
+﻿@model Dorothy.ViewModels.Guests.EditViewModel
 
-<h2>Gast hinzufügen</h2>
+<h2>Gast bearbeiten</h2>
 <hr />
 
 <form class="form-horizontal" method="POST">
@@ -10,7 +10,7 @@
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Hinzufügen</button>
+            <button type="submit" class="btn btn-primary">Speichern</button>
         </div>
     </div>
 </form>
