--- a/src/Dorothy/Views/Shared/_Layout.cshtml
+++ b/src/Dorothy/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Dorothy</title>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-file-version="true" />
+    <link rel="stylesheet" href="~/css/site.min.css" asp-file-version="true" />
 </head>
 <body>
     @if (User.Identity.IsAuthenticated)
@@ -42,7 +42,7 @@
     <script src="//ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/bootstrap.min.js"></script>
     <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
     <script src="//ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
-    <script src="~/js/site.js" asp-file-version="true"></script>
+    <script src="~/js/site.min.js" asp-file-version="true"></script>
 
     @RenderSection("scripts", required: false)
 </body>
