Texting of save the date page.

--- a/src/Dorothy/wwwroot/css/site.scss
+++ b/src/Dorothy/wwwroot/css/site.scss
@@ -31,3 +31,18 @@
 .text-muted.salutation {
     font-size: 9px;
 }
+
+.page {
+    .save-the-date {
+        h1 {
+            text-align:center;
+        }
+        h2 {
+            text-align:center;
+        }
+        h3 {
+            text-align:center;
+        }
+
+    }
+}
