--- a/src/Dorothy/Views/Shared/_Layout.cshtml
+++ b/src/Dorothy/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Dorothy</title>
+    <title>Christina und Hannes heiraten</title>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.min.css" asp-file-version="true" />
