--- a/src/Dorothy/Views/SaveTheDate/Index.cshtml
+++ b/src/Dorothy/Views/SaveTheDate/Index.cshtml
@@ -2,41 +2,53 @@
 
 <div class="page save-the-date">
 
-    <h2>
-        Save the date
-    </h2>
-
-    <h1>
-        3. September 2016
-    </h1>
-
-    <h2>
-        <span class="glyphicon glyphicon-time"></span> 16:00 Uhr<br />
-        <span class="glyphicon glyphicon-map-marker"></span> Linz (Treffling)
-    </h2>
-
-    <p>
-        @(Model.Salutation ?? "Hallo,")
-    </p>
-
-    <p>
-        jup, wir heiraten. Ist ja auch endlich mal der Zeit. Und wir würden uns sehr freuen, wenn du mit uns feierst.
-    </p>
-
-    <p>
-        Du wirst natürlich noch eine ordentliche Einladung von uns bekommen.
-        Das kann aber noch ein bisschen dauern. Deswegen haben wir uns gedacht, dass eine Vorwarnung durchaus nützlich sein könnte.
-        Nun, du bist hiermit vorgewarnt.
-    </p>
-
-    <p>
-        Liebe Grüße,<br />
-        ~ Christina und Hannes
-    </p>
-
-    <p>
-        ps: Du kannst uns unter <a href="mailto:cfeilmayr@icloud.com">cfeilmayr@icloud.com</a> oder 
-        <a href="mailto:hannes@sachsenhofer.com">hannes@sachsenhofer.com</a> erreichen. Zum Beispiel bei Fragen, oder auch einfach so.
-    </p>
-
+    <div class="row">
+        
+        <div class="col-lg-6">
+            <div class="well">
+                <h2>
+                    Save the date
+                </h2>
+            
+                <h1>
+                    3. September 2016
+                </h1>
+            
+                <h2>
+                    <span class="glyphicon glyphicon-time"></span> 16:00 Uhr<br />
+                    <span class="glyphicon glyphicon-map-marker"></span> Linz (Treffling)
+                </h2>
+            </div>
+        </div>
+        
+        <div class="col-lg-6">
+            <div class="well">
+                <p>
+                    @(Model.Salutation ?? "Hallo,")
+                </p>
+                
+                <p>
+                    jup, wir heiraten. Ist ja auch endlich mal der Zeit, das mit dem Kind haben wir ja irgendwie schon übersehen. 
+                    Und wir würden uns sehr freuen, wenn du mit uns feierst.
+                </p>
+                
+                <p>
+                    Du wirst natürlich noch eine ordentliche Einladung von uns bekommen.
+                    Das kann aber noch ein bisschen dauern. Deswegen haben wir uns gedacht, dass eine Vorwarnung durchaus nützlich sein könnte.
+                    Nun, du bist hiermit vorgewarnt.
+                </p>
+                
+                <p>
+                    Liebe Grüße,<br />
+                    ~ Christina und Hannes
+                </p>
+                
+                <p>
+                    ps: Du kannst uns unter <a href="mailto:cfeilmayr@icloud.com">cfeilmayr@icloud.com</a> oder 
+                    <a href="mailto:hannes@sachsenhofer.com">hannes@sachsenhofer.com</a> erreichen. Zum Beispiel bei Fragen, oder auch einfach so.
+                </p>
+            </div>
+        </div>
+    
+    </div>
 </div>
