--- a/src/Dorothy/wwwroot/css/site.scss
+++ b/src/Dorothy/wwwroot/css/site.scss
@@ -33,15 +33,18 @@
 }
 
 .page {
-    .save-the-date {
+    &.save-the-date {
         h1 {
-            text-align:center;
+            text-align: center;
+            font-size: 40px;
         }
         h2 {
-            text-align:center;
+            text-align: center;
+            font-size: 30px;
         }
         h3 {
-            text-align:center;
+            text-align: center;
+            font-size: 30px;
         }
 
     }
