Background image for save-the-date landing page.

--- a/src/Dorothy/Views/Home/Index.cshtml
+++ b/src/Dorothy/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 <h1>
     Christina und Hannes heiraten ...
     <small>
-        More coming soon <span class="glyphicon glyphicon-hourglass"></span>
+        mehr hierzu kommt erst <span class="glyphicon glyphicon-hourglass"></span>
     </small>
 </h1>
