--- a/src/Dorothy/Views/SaveTheDate/Index.cshtml
+++ b/src/Dorothy/Views/SaveTheDate/Index.cshtml
@@ -35,7 +35,7 @@
             <hr/>
 
             <p>
-                jup, wir heiraten. Ist ja auch end&shy;lich mal an der Zeit, das mit dem Kind haben wir ja irgend&shy;wie schon über&shy;sehen.
+                jup, wir heiraten. Ist ja auch end&shy;lich mal an der Zeit, das mit dem Kind haben wir eh irgend&shy;wie schon über&shy;sehen.
             </p>
 
             <p>
