Move CSS @import out of SASS file, because I couldn't stop it from importing directly into the file.

--- a/src/Dorothy/wwwroot/css/site.scss
+++ b/src/Dorothy/wwwroot/css/site.scss
@@ -1,6 +1,4 @@
-﻿@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
-body {
+﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
     font-family: 'Open Sans', sans-serif;
