--- a/src/Dorothy/wwwroot/css/site.scss
+++ b/src/Dorothy/wwwroot/css/site.scss
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 65px;
     padding-bottom: 20px;
     font-family: 'Open Sans', sans-serif;
 }
@@ -13,8 +13,8 @@
     margin-bottom: 15px;
 
     ul {
-        margin:0;
-        padding:0;
+        margin: 0;
+        padding: 0;
         list-style-type: none;
         list-style-position: inside;
     }
@@ -52,7 +52,7 @@ body.login {
             height: 40px;
             padding: 0 12px;
             display: block;
-            margin:0;
+            margin: 0;
         }
 
         label {
@@ -62,6 +62,18 @@ body.login {
         .btn {
             margin-left: auto;
             margin-right: auto;
+        }
+    }
+}
+
+body.home {
+    .date-box {
+        font-size: 30px;
+        text-align: center;
+
+        a, a:hover {
+            color: #333;
+            text-decoration: none;
         }
     }
 }
