--- a/src/Dorothy/Views/Photos/Index.cshtml
+++ b/src/Dorothy/Views/Photos/Index.cshtml
@@ -12,7 +12,7 @@
         </div> 
     </div>
     <div class="col-md-2 text-center">
-        <h1><span class="glyphicon glyphicon-camera huge"></span></h1>
+        <span class="glyphicon glyphicon-camera huge"></span>
     </div>    
 </div>
 
