--- a/src/Dorothy/wwwroot/css/site.scss
+++ b/src/Dorothy/wwwroot/css/site.scss
@@ -120,3 +120,24 @@ body.save-the-date {
         background-color: rgba(255, 255, 255, 0.75);
     }
 }
+
+body.rsvp {
+    input#Name {
+        display: inline;
+        width: 180px;
+    }
+
+    select#Type {
+        display: inline;
+        width: 180px;
+    }
+
+    input#AdultsCount, input#ChildCount {
+        display: inline;
+        width: 60px;
+    }
+
+    textarea {
+        height: 60px;
+    }
+}
