--- a/src/Dorothy/Views/Shared/_Layout.cshtml
+++ b/src/Dorothy/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a asp-controller="Guests" asp-action="Index">Gäste verwalten</a></li>
+                                    <li><a asp-controller="RsvpAdmin" asp-action="Index">An-/Abmeldungen einsehen</a></li>
                                 </ul>
                             </li>
                         }
