--- a/src/Dorothy/Views/User/Faq.cshtml
+++ b/src/Dorothy/Views/User/Faq.cshtml
@@ -1,1 +1,65 @@
-﻿FAQ.
+﻿<h1>Frequently Asked Questions (FAQ)</h1>
+
+<p class="text-muted">
+    Wir waren schon auf vielen Hochzeiten, und stets haben wir uns vorab die gleichen Fragen gestellt:
+    Ist Krawatte schon over-dressed? Muss ich tanzen können? Muss ich eh nicht verdursten? Sind die Brautjungfern noch zu haben?
+    Die häufigsten Fragen beantworten wir deswegen gleich hier.
+</p>
+
+<div class="row">
+    <div class="col-sm-6">
+        <hr />
+        <h3>Darf ich meine Kinder mitbringen?</h3>
+        Ja, unbedingt! Wir werden uns etwas überlegen, damit ihnen nicht zu schnell langweilig wird.
+    </div>
+    <div class="col-sm-6">
+        <hr />
+        <h3>Ist Krawatte schon over-dressed?</h3>
+        Gut möglich. Es gibt keinen Dress-Code, du kannst auch in Jeans kommen, wenn du gerne magst.
+        Hauptsache, du hast es gemütlich und kannst ordentlich mit uns feiern.
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+        <hr />
+        <h3>Kann man dort übernachten?</h3>
+        Ja. Es gibt in gemütlicher Gehweite ein <a href="http://www.kreuzwirt.cc/kreuzwirt/index.php?lang=de&page=home">günstiges, kleines Landhotel</a> mit genügend Zimmern.
+        Bitte kontaktiere uns, wenn du Interesse hast, wir können gerne für dich reservieren.
+        Die Kosten musst du allerdings selbst tragen, sie betragen ca. 80 Euro pro Doppelzimmer inkl. Frühstück.
+    </div>
+    <div class="col-sm-6">
+        <hr />
+        <h3></h3>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+        <hr />
+        <h3>Muss ich tanzen können?</h3>
+        Es gibt keine Live-Musik. Der DJ wird die Musik eher spontan an die Stimmung anpassen,
+        er hat aber strikte Anweisung (unter Pönale), auf keinen Fall Helene Fischer, Gabalier oder ähnliches aufzulegen.
+    </div>
+    <div class="col-sm-6">
+        <hr />
+        <h3>Muss ich eh nicht verdursten?</h3>
+        Nur wenn du vergisst, regelmäßig Nachschub zu bestellen oder von der Bar zu holen. 
+        Du kannst jedenfalls dein Porte­mon­naie zu Hause lassen.<br /><br />
+        Für den Hunger gibt es übrigens ein bodenständiges, kaltes Buffet, sowohl für Fleischesser als auch für Vegetarier.
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+        <hr />
+        <h3>Sind die Brautjungfern noch zu haben?</h3>
+        Wir haben uns bei ihnen erkundigt. Die einhellige Antwort war: "Kommt drauf an, wer fragt".
+    </div>
+    <div class="col-sm-6">
+        <hr />
+        <h3></h3>
+    </div>
+</div>
+
+
